# codex-cli

./: .gitignore  .sourceme.swp  Cargo.toml  MAKEFILE-GUIDE.md  MCP-ANDROID-TEST-REPORT.md  Makefile  README.md  TAURI-V2-ANDROID-SUCCESS.md  TESTING-INFRASTRUCTURE-SUMMARY.md  android-build.md  android-simulation-log.md  android-test-results.md  jest.config.js  package.json  pnpm-lock.yaml  run-android-test.js  rust-toolchain.toml  sourceme  tauri.conf.json  validate-phase1.js
android-build/: build-android.sh  test-device.sh
android-build/config/: android-config.json
android-build/keystore/: debug.keystore  generate-release-keystore.sh
scripts/: mcp-android-test.js  setup-android.sh  setup_rust_macos.sh  simulate-android-test.js  verify_rust_env.sh
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs  plan.rs  platform.rs  process.rs  session.rs
tests/: android-appium.spec.js  ios-appium.spec.js  macos-e2e.spec.js  phase1-validation.spec.js  setup.js  user-workflow-validation.test.js
