[package]
name = "codex-cli-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["dialog-all", "fs-all"] }
tauri-plugin-log = "2.6.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-std", "signal"] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
# local codex apply-patch crate
apply-patch = { package = "codex-apply-patch", path = "../external/codex/codex-rs/apply-patch" }

[build-dependencies]
tauri-build = { version = "1" }
