[package]
name = "codex-cli-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_cli_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-cli-desktop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [ "custom-protocol"] }
tauri-plugin-log = { version = "2" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-std", "signal"] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
# local codex apply-patch crate
apply-patch = { package = "codex-apply-patch", path = "../external/codex/codex-rs/apply-patch" }
tauri-plugin-fs = "2"
# tauri-plugin-notification = "2"  # Temporarily disabled due to macOS SDK issues
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
